[Drunks-Client] Setting everything up
- Ignore sonarlint

--- a/client/src/main/resources/org/kappa/client/hello-view.fxml
+++ b/client/src/main/resources/org/kappa/client/hello-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" prefHeight="420.0" prefWidth="461.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.2-ea" fx:controller="org.kappa.client.DrunksController">
+<VBox alignment="CENTER" prefHeight="420.0" prefWidth="461.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.kappa.client.DrunksController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
