--- a/client/src/main/resources/org/kappa/client/game-view.fxml
+++ b/client/src/main/resources/org/kappa/client/game-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToolBar?>
@@ -12,51 +13,56 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ToolBar minHeight="-Infinity" prefHeight="80.0">
-        <items>
-          <Button mnemonicParsing="false" text="Button" />
-        </items>
-         <VBox.margin>
-            <Insets bottom="50.0" />
-         </VBox.margin>
-         <padding>
-            <Insets left="32.0" right="32.0" />
-         </padding>
-      </ToolBar>
-      <HBox prefHeight="100.0" prefWidth="200.0">
+
+<Scene fx:id="gameViewScene" onKeyPressed="#handleKeyPress" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.kappa.client.ui.GameViewController">
+   <root>
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0">
          <children>
-            <ImageView id="dummyBoard" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@image/background.png" />
-               </image>
-            </ImageView>
-            <GridPane minHeight="704.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Level 1" textAlignment="CENTER" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="354.0" text="Level 2" textAlignment="CENTER" GridPane.rowIndex="1" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="354.0" text="Level 3" textAlignment="CENTER" GridPane.rowIndex="2" />
-               </children>
-               <HBox.margin>
-                  <Insets />
-               </HBox.margin>
+            <ToolBar minHeight="-Infinity" prefHeight="80.0">
+              <items>
+                <Button fx:id="gameViewButton" focusTraversable="false" mnemonicParsing="false" onMouseClicked="#handleGameViewButton" text="Button" />
+              </items>
+               <VBox.margin>
+                  <Insets bottom="50.0" />
+               </VBox.margin>
                <padding>
-                  <Insets bottom="32.0" left="32.0" right="32.0" top="32.0" />
+                  <Insets left="32.0" right="32.0" />
                </padding>
-            </GridPane>
+            </ToolBar>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <ImageView id="dummyBoard" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@image/background.png" />
+                     </image>
+                  </ImageView>
+                  <GridPane minHeight="704.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label alignment="CENTER" contentDisplay="CENTER" text="Level 1" textAlignment="CENTER" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="354.0" text="Level 2" textAlignment="CENTER" GridPane.rowIndex="1" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="354.0" text="Level 3" textAlignment="CENTER" GridPane.rowIndex="2" />
+                     </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <padding>
+                        <Insets bottom="32.0" left="32.0" right="32.0" top="32.0" />
+                     </padding>
+                  </GridPane>
+               </children>
+               <VBox.margin>
+                  <Insets bottom="32.0" left="32.0" right="32.0" />
+               </VBox.margin>
+            </HBox>
          </children>
-         <VBox.margin>
-            <Insets bottom="32.0" left="32.0" right="32.0" />
-         </VBox.margin>
-      </HBox>
-   </children>
-</VBox>
+      </VBox>
+   </root>
+</Scene>
