--- a/client/src/main/resources/org/kappa/client/drunks-view.fxml
+++ b/client/src/main/resources/org/kappa/client/drunks-view.fxml
@@ -17,7 +17,7 @@
             <Rectangle fill="WHITE" height="32.0" layoutX="32.0" stroke="BLACK" width="32.0" />
             <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="130.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/boyup_1.png" />
+                  <Image url="@images/mainPlayer/boyup_1.png" />
                </image>
             </ImageView>
             <Rectangle fill="WHITE" height="32.0" layoutX="64.0" stroke="BLACK" width="32.0" />
