--- a/client/src/main/resources/org/kappa/client/board-view.fxml
+++ b/client/src/main/resources/org/kappa/client/board-view.fxml
@@ -8,12 +8,12 @@
    <children>
       <ImageView id="dummyBoard" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/systemImages/background.png" />
+            <Image url="@images/application/background.png" />
          </image>
       </ImageView>
       <ImageView id="dummyPlayer" fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/mainCharacter/boyup_1.png" />
+            <Image url="@images/punk/boyup_1.png" />
          </image>
       </ImageView>
    </children>
