--- a/client/src/main/resources/org/kappa/client/game-view.fxml
+++ b/client/src/main/resources/org/kappa/client/game-view.fxml
@@ -12,13 +12,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<Scene fx:id="gameViewScene" onKeyReleased="#handleKeyRelease" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.kappa.client.ui.GameViewController">
+<Scene fx:id="gameViewScene" onKeyReleased="#handleKeyRelease" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.kappa.client.ui.GameViewController">
    <root>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0">
+      <VBox style="-fx-background-color: #F2FFF5;" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0">
          <children>
-            <ToolBar minHeight="-Infinity" prefHeight="80.0">
+            <ToolBar styleClass="toolbar" minHeight="-Infinity" prefHeight="80.0">
               <items>
                 <Button fx:id="gameViewButton" focusTraversable="false" mnemonicParsing="false" onMouseClicked="#handleGameViewButton" text="Button" />
               </items>
@@ -46,9 +46,25 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label alignment="CENTER" contentDisplay="CENTER" text="Level 1" textAlignment="CENTER" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="354.0" text="Level 2" textAlignment="CENTER" GridPane.rowIndex="1" />
-                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="354.0" text="Level 3" textAlignment="CENTER" GridPane.rowIndex="2" />
+                        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="42.0" layoutY="354.0" text="1" textAlignment="CENTER" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Arial Black" size="18.0" />
+                           </font></Label>
+                        <ImageView fitHeight="38.0" fitWidth="46.0" GridPane.rowIndex="2">
+                           <image>
+                              <Image url="@images/application/flag.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="27.0" fitWidth="31.0" GridPane.rowIndex="1">
+                           <image>
+                              <Image url="@images/application/heart.png" />
+                           </image>
+                        </ImageView>
+                        <ImageView fitHeight="35.0" fitWidth="35.0">
+                           <image>
+                              <Image url="@images/enemy/copdown_1.png" />
+                           </image>
+                        </ImageView>
                      </children>
                      <HBox.margin>
                         <Insets />
