--- a/client/src/main/resources/org/kappa/client/login-view.fxml
+++ b/client/src/main/resources/org/kappa/client/login-view.fxml
@@ -1,36 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Scene?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0" style="-fx-background-color: #F2FFF5;">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0" style="-fx-background-color: #F2FFF5;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
          <children>
-            <TextField id="usernameTextfield" prefHeight="26.0" prefWidth="1518.0" scaleX="0.4" scaleY="2.0" style="-fx-background-color: white;" translateY="200.0">
-               <VBox.margin>
-                  <Insets left="50.0" right="50.0" top="70.0" />
-               </VBox.margin>
-            </TextField>
+      <TextField id="passwordTextfield" style="-fx-background-color: white;" text="ffgfgfg" translateY="370.0">
+         <VBox.margin>
+            <Insets left="400.0" right="400.0" />
+         </VBox.margin>
+         <padding>
+            <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+         </padding>
+         <font>
+            <Font size="24.0" />
+         </font>
+      </TextField>
             <Text fill="#65b7e6" strokeType="OUTSIDE" strokeWidth="0.0" text="Username" translateX="405.0" translateY="220.0">
                <font>
                   <Font name="Arial" size="35.0" />
                </font>
             </Text>
-            <TextField id="passwordTextfield" prefHeight="26.0" prefWidth="1518.0" scaleX="0.4" scaleY="2.0" style="-fx-background-color: white;" translateY="270.0">
-               <VBox.margin>
-                  <Insets left="50.0" right="50.0" />
-               </VBox.margin>
-            </TextField>
-            <Text fill="#65b7e6" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" translateX="405.0" translateY="300.0">
+      <TextField id="usernameTextfield" style="-fx-background-color: white;" text="ffgfgfg" translateY="100.0">
+         <padding>
+            <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
+         </padding>
+         <font>
+            <Font size="24.0" />
+         </font>
+         <VBox.margin>
+            <Insets left="400.0" right="400.0" />
+         </VBox.margin>
+      </TextField>
+            <Text fill="#65b7e6" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" translateX="405.0" translateY="270.0">
                <font>
                   <Font name="Arial" size="35.0" />
                </font>
             </Text>
-            <Button  id="SignUpToPlay" mnemonicParsing="false" scaleX="2.0" scaleY="2.0" style="-fx-background-color: #65b7e6;" text="Sign up" textFill="WHITE" translateX="684.0" translateY="357.0">
+            <Button id="SignUpToPlay" mnemonicParsing="false" scaleX="2.0" scaleY="2.0" style="-fx-background-color: #65b7e6;" text="Sign up" textFill="WHITE" translateX="684.0" translateY="357.0">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
