--- a/client/src/main/resources/org/kappa/client/game-view.fxml
+++ b/client/src/main/resources/org/kappa/client/game-view.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Scene?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.Scene?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 <Scene fx:id="gameViewScene" onKeyReleased="#handleKeyRelease" stylesheets="@style.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.kappa.client.ui.GameViewController">
    <root>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0" style="-fx-background-color: #F2FFF5;">
@@ -179,7 +173,7 @@
                               </ImageView>
                            </children>
                         </GridPane>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="1" textAlignment="CENTER" wrappingWidth="37.3929443359375" GridPane.rowIndex="2">
+                        <Text id="gv-level" strokeType="OUTSIDE" strokeWidth="0.0" text="1" textAlignment="CENTER" wrappingWidth="37.3929443359375" GridPane.rowIndex="2">
                            <font>
                               <Font name="Arial Black" size="20.0" />
                            </font>
