--- a/client/src/main/resources/org/kappa/client/highscore-view.fxml
+++ b/client/src/main/resources/org/kappa/client/highscore-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0" style="-fx-background-color: #F2FFF5;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0" style="-fx-background-color: #F2FFF5;" xmlns="http://javafx.com/javafx/20.0.1">
    <children>
       <ImageView fitHeight="232.0" fitWidth="589.0" translateX="350.0" translateY="30.0">
          <image>
