--- a/client/src/main/resources/org/kappa/client/login-view.fxml
+++ b/client/src/main/resources/org/kappa/client/login-view.fxml
@@ -3,12 +3,10 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
+<?import javafx.scene.text.*?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="864.0" prefWidth="1280.0" style="-fx-background-color: #F2FFF5;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextField id="username" style="-fx-background-color: white;" translateY="370.0">
+      <TextField id="password" style="-fx-background-color: white;" translateY="370.0">
          <VBox.margin>
             <Insets left="400.0" right="400.0" />
          </VBox.margin>
@@ -24,7 +22,7 @@
             <Font name="Arial" size="35.0" />
          </font>
       </Text>
-      <TextField id="password" style="-fx-background-color: white;" translateY="100.0">
+      <TextField id="username" style="-fx-background-color: white;" translateY="100.0">
          <padding>
             <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
          </padding>
